--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2972,6 +2972,7 @@ input[type="radio" i] {
 					top: 0;
 					width: 100%;
 					height: 100%;
+					background: url("images/overlay.png");
 					background-size: 128px 128px;
 				}
 
